--- a/index.html
+++ b/index.html
@@ -160,7 +160,14 @@
   <h2>3. Подробности</h2>
 
   <label>Количество человек:
-    <input type="number" id="count" min="1" value="1">
+    <input
+  type="text"
+  id="count"
+  inputmode="numeric"
+  pattern="\d*"
+  enterkeyhint="done"
+  placeholder="1"
+>
   </label>
 
   <label id="address-container" style="display:none;">
@@ -262,25 +269,6 @@
     <button class="btn-next" id="finish-btn">Записаться</button>
   </div>
 </div>
-
-  <!-- Кнопка “Готово” для скрытия клавиатуры на iOS -->
-  <button
-    type="button"
-    style="
-      position: fixed;
-      bottom: env(safe-area-inset-bottom,10px);
-      right: 10px;
-      padding: 8px 12px;
-      background: #444;
-      color: #fff;
-      border: none;
-      border-radius: 6px;
-      z-index: 1000;
-    "
-    onclick="document.activeElement.blur()"
-  >
-    Готово
-  </button>
 
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script>
