--- a/index.html
+++ b/index.html
@@ -409,6 +409,7 @@ function finish() {
   };
 
   if (window.Telegram && Telegram.WebApp && Telegram.WebApp.sendData) {
+  console.log("→ payload to bot:", data);
     Telegram.WebApp.sendData(JSON.stringify({ action: 'booking', payload: data }));
   } else {
     console.log('Mock sendData:', data);
