--- a/index.html
+++ b/index.html
@@ -4,130 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Show Today — Бронирование</title>
-  <!-- Flatpickr CSS для календаря -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-
   <style>
-    :root {
-      --yellow: #ff0;
-      --black:  #0d0d0d;
-      --white:  #fff;
-      --blue:   #0042ff;
-    }
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    html, body {
-      height: 100%;
-      background: var(--yellow);
-      font-family: "Segoe UI", sans-serif;
-    }
-    body {
-      background-image: url("background.png");
-      background-size: cover;
-      background-position: center;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 20px;
-    }
-    .wizard {
-      background: var(--black);
-      border-radius: 12px;
-      width: 100%;
-      max-width: 380px;
-      overflow: hidden;
-      box-shadow: 0 4px 16px rgba(0,0,0,0.4);
-    }
-    .wizard header {
-      background: var(--yellow);
-      text-align: center;
-      padding: 16px;
-    }
-    .wizard header img {
-      max-width: 200px;
-      height: auto;
-    }
-    .wizard .step {
-      padding: 16px;
-      display: none;
-      color: var(--white);
-    }
-    .wizard .step.active { display: block; }
-    .wizard .step h2 {
-      margin-bottom: 12px;
-      font-size: 1.1rem;
-    }
-    .wizard label {
-      display: flex;
-      align-items: center;
-      margin-bottom: 8px;
-      cursor: pointer;
-    }
-    .wizard input[type="radio"],
-    .wizard input[type="checkbox"] {
-      accent-color: var(--yellow);
-      margin-right: 8px;
-      width: 18px;
-      height: 18px;
-    }
-    .wizard input,
-    .wizard select,
-    .wizard textarea {
-      width: 100%;
-      padding: 8px;
-      margin: 4px 0 12px;
-      border: 1px solid #444;
-      border-radius: 4px;
-      background: #222;
-      color: var(--white);
-    }
-    .wizard textarea { resize: vertical; }
-    .wizard .buttons {
-      display: flex;
-      justify-content: space-between;
-      gap: 8px;
-    }
-    .wizard button {
-      flex: 1;
-      padding: 10px;
-      font-size: 1rem;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-    .wizard .btn-next {
-      background: var(--blue);
-      color: var(--white);
-    }
-    .wizard .btn-prev {
-      background: #444;
-      color: var(--white);
-    }
-    .wizard button:disabled {
-      opacity: 0.5;
-      cursor: default;
-    }
-    /* Центрируем чекбоксы на шаге 4 */
-    .wizard .step[data-step="4"] #extras-container {
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-      align-items: flex-start;
-      max-width: 90%;
-      margin: 0 auto 16px;
-    }
-    .wizard .step[data-step="4"] #extras-container label {
-      color: var(--white);
-    }
+    :root { --yellow:#ff0; --black:#0d0d0d; --white:#fff; --blue:#0042ff; }
+    * { box-sizing:border-box; margin:0; padding:0; }
+    html, body { height:100%; background:var(--yellow); font-family:"Segoe UI",sans-serif; }
+    body { background-image:url("background.png"); background-size:cover; background-position:center; display:flex; align-items:center; justify-content:center; padding:20px; }
+    .wizard { background:var(--black); border-radius:12px; width:100%; max-width:380px; overflow:hidden; box-shadow:0 4px 16px rgba(0,0,0,0.4); }
+    .wizard header { background:var(--yellow); text-align:center; padding:16px; }
+    .wizard header img { max-width:200px; height:auto; }
+    .wizard .step { padding:16px; display:none; color:var(--white); }
+    .wizard .step.active { display:block; }
+    .wizard .step h2 { margin-bottom:12px; font-size:1.1rem; }
+    .wizard label { display:flex; align-items:center; margin-bottom:8px; cursor:pointer; }
+    .wizard input[type="radio"], .wizard input[type="checkbox"] { accent-color:var(--yellow); margin-right:8px; width:18px; height:18px; }
+    .wizard input, .wizard select, .wizard textarea { width:100%; padding:8px; margin:4px 0 12px; border:1px solid #444; border-radius:4px; background:#222; color:var(--white); }
+    .wizard textarea { resize:vertical; }
+    .wizard .buttons { display:flex; justify-content:space-between; gap:8px; }
+    .wizard button { flex:1; padding:10px; font-size:1rem; border:none; border-radius:6px; cursor:pointer; }
+    .wizard .btn-next { background:var(--blue); color:var(--white); }
+    .wizard .btn-prev { background:#444; color:var(--white); }
+    .wizard button:disabled { opacity:0.5; cursor:default; }
+    .wizard .step[data-step="4"] #extras-container { display:flex; flex-direction:column; gap:8px; align-items:flex-start; max-width:90%; margin:0 auto 16px; }
+    .wizard .step[data-step="4"] #extras-container label { color:var(--white); }
   </style>
 </head>
 <body>
-
   <div class="wizard">
-    <header>
-      <img src="logo.png" alt="Show Today">
-    </header>
-
-    <!-- Шаг 1: формат -->
+    <header><img src="logo.png" alt="Show Today"></header>
+    <!-- Шаги -->
     <div class="step active" data-step="1">
       <h2>1. Выберите формат</h2>
       <label><input type="radio" name="mode" value="studio">В студии</label>
@@ -137,154 +42,63 @@
         <button class="btn-next" disabled>Далее →</button>
       </div>
     </div>
-
-    <!-- Шаг 2: дата и время -->
     <div class="step" data-step="2">
       <h2>2. Дата и время</h2>
-      <label>Дата:
-        <input id="date-picker" readonly placeholder="– выберите дату –">
-      </label>
-      <label>Время:
-        <select id="time-select">
-          <option value="">– выберите время –</option>
-        </select>
-      </label>
+      <label>Дата:<input id="date-picker" readonly placeholder="– выберите дату –"></label>
+      <label>Время:<select id="time-select"><option value="">– выберите время –</option></select></label>
       <div class="buttons">
         <button class="btn-prev">← Назад</button>
         <button class="btn-next" disabled>Далее →</button>
       </div>
     </div>
-
-    <!-- Шаг 3: подробности -->
     <div class="step" data-step="3">
       <h2>3. Подробности</h2>
-
-      <label>Количество человек:
-        <input
-          type="text"
-          id="count"
-          inputmode="numeric"
-          pattern="\d*"
-          enterkeyhint="done"
-          placeholder="1"
-        >
-      </label>
-
-      <label id="address-container" style="display:none;">
-        Адрес (для выезда):
-        <input type="text" id="address">
-      </label>
-
-      <label>Программа:
-        <select id="program">
-          <option value="">– выберите –</option>
-          <option value="classic">Классика</option>
-          <option value="musicality">Музыкалити</option>
-          <option value="battle">Battle Show</option>
-          <option value="lotto">Музыкальное лото</option>
-          <option value="kids">Детский формат</option>
-          <option value="quiz">Квиз-мафия</option>
-          <option value="21plus">21+</option>
-        </select>
-      </label>
-
-      <label>Средний возраст:
-        <select id="age">
-          <option value="">– выберите –</option>
-          <option value="7-12">7-12</option>
-          <option value="13-17">13-17</option>
-          <option value="18-30">18-30</option>
-          <option value="31-45">31-45</option>
-          <option value="45+">45+</option>
-        </select>
-      </label>
-
-      <label>Сколько раз были u нас:
-        <select id="visits">
-          <option value="">– выберите –</option>
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
-          <option value="5+">5+</option>
-        </select>
-      </label>
-
-      <label>Повод праздника:
-        <select id="occasion">
-          <option value="">– выберите –</option>
-          <option value="день рождения">день рождения</option>
-          <option value="корпоратив">корпоратив</option>
-          <option value="мальчишник">мальчишник</option>
-          <option value="девичник">девичник</option>
-          <option value="встреча с друзьями">встреча с друзьями</option>
-          <option value="выпускной">выпускной</option>
-          <option value="поездка на природу">поездка на природу</option>
-          <option value="свадьба">свадьба</option>
-          <option value="иное">иное</option>
-        </select>
-      </label>
-
+      <label>Количество человек:<input type="text" id="count" inputmode="numeric" pattern="\d*" enterkeyhint="done" placeholder="1"></label>
+      <label id="address-container" style="display:none;">Адрес (для выезда):<input type="text" id="address"></label>
+      <label>Программа:<select id="program"><option value="">– выберите –</option><option value="classic">Классика</option><option value="musicality">Музыкалити</option><option value="battle">Battle Show</option><option value="lotto">Музыкальное лото</option><option value="kids">Детский формат</option><option value="quiz">Квиз-мафия</option><option value="21plus">21+</option></select></label>
+      <label>Средний возраст:<select id="age"><option value="">– выберите –</option><option value="7-12">7-12</option><option value="13-17">13-17</option><option value="18-30">18-30</option><option value="31-45">31-45</option><option value="45+">45+</option></select></label>
+      <label>Сколько раз были у нас:<select id="visits"><option value="">– выберите –</option><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5+">5+</option></select></label>
+      <label>Повод праздника:<select id="occasion"><option value="">– выберите –</option><option value="день рождения">день рождения</option><option value="корпоратив">корпоратив</option><option value="мальчишник">мальчишник</option><option value="девичник">девичник</option><option value="встреча с друзьями">встреча с друзьями</option><option value="выпускной">выпускной</option><option value="поездка на природу">поездка на природу</option><option value="свадьба">свадьба</option><option value="иное">иное</option></select></label>
       <div class="buttons">
         <button class="btn-prev">← Назад</button>
         <button class="btn-next" disabled>Далее →</button>
       </div>
     </div>
-
-    <!-- Шаг 4: дополнительные услуги + пожелания -->
     <div class="step" data-step="4">
       <h2>4. Дополнительные услуги</h2>
       <div id="extras-container">
-        <label class="extra-restroom">
-          <input type="checkbox" name="extras" value="restroom">
-          Комната отдыха
-        </label>
-        <label class="extra-photographer">
-          <input type="checkbox" name="extras" value="photographer">
-          Фотограф
-        </label>
-        <label class="extra-videographer">
-          <input type="checkbox" name="extras" value="videographer">
-          Видеограф
-        </label>
-        <label class="extra-disco">
-          <input type="checkbox" name="extras" value="disco">
-          Дискотека
-        </label>
+        <label><input type="checkbox" name="extras" value="restroom">Комната отдыха</label>
+        <label><input type="checkbox" name="extras" value="photographer">Фотограф</label>
+        <label><input type="checkbox" name="extras" value="videographer">Видеограф</label>
+        <label><input type="checkbox" name="extras" value="disco">Дискотека</label>
       </div>
-
-      <!-- Поле для пожеланий -->
-      <label style="display:block; margin-top:12px; color:var(--white);">
-        Ваши пожелания (необязательно):
-        <textarea
-          id="wishes"
-          rows="3"
-          style="width:100%; padding:8px; margin-top:4px; background:#222; border:1px solid #444; color:#fff; border-radius:4px;"
-          placeholder="Например: хотелось бы девочку ведущую…"
-        ></textarea>
-      </label>
-
-      <div class="buttons" style="margin-top:16px;">
-        <button class="btn-prev">← Назад</button>
-        <button class="btn-next" id="finish-btn">Записаться</button>
-      </div>
+      <label style="display:block; margin-top:12px; color:var(--white);">Ваши пожелания (необязательно):<textarea id="wishes" rows="3" style="width:100%; padding:8px; margin-top:4px; background:#222; border:1px solid #444; color:#fff; border-radius:4px;" placeholder="Например: хотелось бы девочку ведущую…"></textarea></label>
+      <div class="buttons" style="margin-top:16px;"><button class="btn-prev">← Назад</button><button class="btn-next" id="finish-btn">Записаться</button></div>
     </div>
   </div>
-
-  <!-- Подключаем Flatpickr и WebApp скрипты -->
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script>
-    // Подгоняем высоту под клавиатуру
-    function adjustHeight() {
-      document.body.style.height = (window.visualViewport?.height || window.innerHeight) + 'px';
+    function adjustHeight() { document.body.style.height = (window.visualViewport?.height||window.innerHeight)+'px'; }
+    window.visualViewport?.addEventListener('resize',adjustHeight); adjustHeight();
+    const steps=Array.from(document.querySelectorAll('.step')), timeSelect=document.getElementById('time-select'), datePicker=document.getElementById('date-picker'), count=document.getElementById('count'), addressContainer=document.getElementById('address-container'), address=document.getElementById('address'), program=document.getElementById('program'), age=document.getElementById('age'), visits=document.getElementById('visits'), occasion=document.getElementById('occasion'); let current=0;
+    for(let h=9;h<=22;h++){['00','30'].forEach(m=>{if(h===22&&m==='30')return;const opt=document.createElement('option');opt.value=`${h.toString().padStart(2,'0')}:${m}`;opt.textContent=opt.value;timeSelect.append(opt);});}
+    flatpickr('#date-picker',{dateFormat:'d.m.Y',minDate:'today',onChange:()=>validateStep(1)});
+    function showStep(idx){steps.forEach((st,i)=>st.classList.toggle('active',i===idx));current=idx;validateStep(idx);const mode=document.querySelector('input[name="mode"]:checked')?.value;addressContainer.style.display=(mode==='outdoor'?'block':'none');if(idx===3){document.querySelector('.extra-restroom').style.display=(mode==='studio'?'flex':'none');}}
+    function validateStep(idx){const btn=steps[idx].querySelector('.btn-next');let ok=false;if(idx===0){ok=!!document.querySelector('input[name="mode"]:checked');}else if(idx===1){ok=!!datePicker.value&&!!timeSelect.value;}else if(idx===2){ok=(Number(count.value)>0&&!!program.value&&!!age.value&&!!visits.value&&!!occasion.value&&(addressContainer.style.display==='none'||address.value.trim()!==''));}else if(idx===3){ok=true;}btn.disabled=!ok;}
+    document.querySelectorAll('.btn-next').forEach(b=>b.addEventListener('click',()=>{if(current<steps.length-1)showStep(current+1);else finish();}));
+    document.querySelectorAll('.btn-prev').forEach(b=>b.addEventListener('click',()=>{if(current>0)showStep(current-1);}));
+    steps.forEach((st,i)=>{st.addEventListener('input',()=>validateStep(i));st.addEventListener('change',()=>validateStep(i));});
+    document.querySelectorAll('input[name="mode"]').forEach(r=>r.addEventListener('change',()=>validateStep(0)));
+    validateStep(0);
+    Telegram.WebApp.ready();
+    const mainBtn=Telegram.WebApp.MainButton;
+    mainBtn.setText('Записаться'); mainBtn.show(); mainBtn.onClick(finish);
+    function finish(){const extras=Array.from(document.querySelectorAll('input[name="extras"]:checked')).map(ch=>ch.value);
+      const data={mode:document.querySelector('input[name="mode"]:checked').value,date:datePicker.value,time:timeSelect.value,count:count.value,address:address.value||'',program:program.value,age:age.value,visits:visits.value,occasion:occasion.value,extras:extras,wishes:document.getElementById('wishes').value.trim()};
+      alert('DEBUG: finish() вызвана!\n\nВот данные для отправки:\n'+JSON.stringify(data,null,2));
+      if(window.Telegram&&Telegram.WebApp&&Telegram.WebApp.sendData){console.log('→ payload to bot:',data);Telegram.WebApp.sendData(JSON.stringify({action:'booking',payload:data}));}else{console.log('Mock sendData:',data);}      
+      steps[current].innerHTML='<p style="color:white;text-align:center;padding:40px 20px;line-height:1.5;">Спасибо!<br>С вами свяжется администратор для уточнения деталей.</p>';
     }
-    window.visualViewport?.addEventListener('resize', adjustHeight);
-    adjustHeight();
-
-    // Элементы формы и шаги
-    const steps  = Array.from(document.querySelectorAll('.step'));
-    let current  = 0;
-    const timeSelect       = document.getElementById('time-select');
-    const datePicker       = document.getElementById('date-picker');
-    const count            = document.getElementById('count');
-    const addressContainer = document.getElementById('address-container');
+  </script>
+</body>
+</html>
